# template_moveit_config

./: CMakeLists.txt  README.md  package.xml  pull_request_template.md
config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml  template.srdf  template.urdf.xacro
launch/: move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  template_moveit.rviz  template_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
